# GRTCODE

./: .gitignore  Makefile.am  README.md  configure.ac
circ/src/: Makefile.am  circ.c  circ.h
circ/test/: test_circ
era5/src/: Makefile.am  atmosphere.c  atmosphere.h  era5.c
era5/test/: test_era5
fortran-bindings/: Makefile.am  grtcode_fortran.F90  malloc_structs.c  molecular_lines_fortran.F90
framework/src/: Makefile.am  driver.c
gas-optics/src/: cuda_kernels.c
longwave/src/: longwave.c
rfmip-irf/src/: Makefile.am  rfmip-irf.c
rfmip-irf/test/: test_rfmip_irf
utilities/src/: Makefile.am  argparse.c  driver.c  driver.h  utilities.c  utilities.h
